--- a/main.css
+++ b/main.css
@@ -174,7 +174,8 @@ a {
 		order: 3;
 	}
 }
-@media screen and (max-width: 1440px) and (min-width: 720px) {
+/* Medium Breakpoint: */
+@media screen and (max-width: 960px) and (min-width: 601px) {
 	#posts {
 		min-height: 30vh;
 	}
@@ -215,7 +216,8 @@ a {
 		order: 9;
 	}
 }
-@media screen and (max-width: 719px) {
+/* Small Breakpoint: */
+@media screen and (max-width: 600px) {
 	#posts {
 		min-height: 30vh;
 	}
