--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ p {
 	font-family: "Open Sans";
 	font-size: 1.3rem;
 }
-a {
+#info a {
 	color: #FFF;
 }
 #info {
@@ -52,15 +52,16 @@ a {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	overflow-y: scroll;
 }
 .post {
 	height: 20vw;
 	width: 20vw;
-	background-color: #81D4FA;
 	margin: 3vw 6vw;
 	position: relative;
 	cursor: pointer;
 	order: 2;
+	box-shadow: 3px 3px 5px 6px #ccc;
 	box-sizing: border-box;
 }
 .post h1 {
@@ -75,6 +76,8 @@ a {
 	width: 100%;
 	background:	url("img/logo.jpg");
 	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	background-position: center;
 	filter: blur(0px);
 	box-sizing: border-box;
 	transition: filter 1s;
@@ -108,7 +111,7 @@ a {
 	display: none;
 	padding-bottom: 15px;
 }
-.blog p {
+.blog p, li {
 	font-size: 1.3rem;
 }
 .media img {
